kubernetes/apps/rcon-web-admin/app/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: &app rcon-web-admin
  labels:
    app.kubernetes.io/name: *app
spec:
  selector:
    app.kubernetes.io/name: *app
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 4327
      targetPort: ws
      protocol: TCP
      name: ws
